Update CICD for basic

--- a/Basic_stack_ubuntu/README
+++ b/Basic_stack_ubuntu/README
@@ -1,15 +1,9 @@
 ✅ What this script does
-
-Update system
-
-Install netstat (net-tools)
-
-Install Docker Engine
-
-Install Docker Compose (plugin)
-
-Install k9s
-
-Add your SSH public key to ~/.ssh/authorized_keys
-
-Apply correct SSH permissions
+- Update system
+- Install netstat (net-tools)
+- Install Docker Engine
+- Install Docker Compose (plugin)
+- Install k9s
+- Install Git
+- Add your SSH public key to ~/.ssh/authorized_keys
+- Apply correct SSH permissions
